twig-sqlite.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sqlite-pod
spec:
  volumes:
    - name: sqlite-pv-storage
      persistentVolumeClaim:
        claimName: twig-pvc
    - name: configmap-kratos-volume
      configMap:
        name: configmap-kratos
  containers:
    - name: sqlite-pv-container
      image: oryd/kratos:v0.9.0-alpha.2
      imagePullPolicy: "IfNotPresent"
      ports:
        - containerPort: 4433
      volumeMounts: 
      - name: sqlite-pv-storage
        mountPath: /var/lib/sqlite
      - name: configmap-kratos-volume
        mountPath: /etc/config/kratos
      # command: ["tail", "-f", "/dev/null"]
      args: ["-c","/etc/config/kratos/kratos.yml","migrate","sql", "-e", "--yes"]
# kratos-migrate:
#       - type: bind
#         source: ./containers/kratos
#         target: /etc/config/kratos
#     command: -c /etc/config/kratos/kratos.yml migrate sql -e --yes
#     restart: on-failure
#     networks:
#       - internal
#   kratos:
#     depends_on:
#       - kratos-migrate
#     image: oryd/kratos:v0.9.0-alpha.2
#     ports:
#       - '4433:4433' # public
#       - '4434:4434' # admin
#     restart: unless-stopped
#     environment:
#       - DSN=sqlite:///var/lib/sqlite/db.sqlite?_fk=true
#     command: serve -c /etc/config/kratos/kratos.yml --dev --watch-courier
#     volumes:
#       - type: bind
#         source: ./containers/kratos
#         target: /etc/config/kratos
#       - type: volume
#         source: kratos-sqlite
#         target: /var/lib/sqlite
#         read_only: false
#     networks:
#       - internal
