twig-auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selfservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selfservice-pod
  template:
    metadata:
      labels:
        app: selfservice-pod
    spec:
      containers:
      - name: kratos-selfservice-ui-node
        image: oryd/kratos-selfservice-ui-node:v0.9.0-alpha.2
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: selfservice-service
spec:
  selector:
    app: selfservice-pod
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 4455
      targetPort: 3000
      nodePort: 30000
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: kratos-deployment
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: kratos-pod
#   template:
#     metadata:
#       labels:
#         app: selfservice-pod
#     spec:
#       containers:
#       - name: kratos-selfservice-ui-node
#         image: oryd/kratos-selfservice-ui-node:v0.9.0-alpha.2
#         ports:
#         - containerPort: 3000
#         env:
#         - name: PORT
#           value: "3000"
#         - name: KRATOS_PUBLIC_URL
#           value: http://kratos-service:4433/
#         - name: KRATOS_BROWSER_URL
#           value: http://127.0.0.1/kratos
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: selfservice-service
# spec:
#   selector:
#     app: selfservice-pod
#   type: LoadBalancer
#   ports:
#     - protocol: TCP
#       port: 4455
#       targetPort: 3000
#       nodePort: 30000
