twig-flask-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-pod
  template:
    metadata:
      labels:
        app: flask-pod
    spec:
      containers:
      - name: flask-container
        image: twig_server:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  selector:
    app: flask-pod
  ports:
    - protocol: TCP
      port: 4455
      targetPort: 5000
      nodePort: 30001
  type: LoadBalancer
